force-app/main/default/objects/Contact/fields/ContactExtId__c.field-meta.xml
<CustomField>
    <fullName>ContactExtId__c</fullName>
    <description>External ID used by loaders to reference Contact records.</description>
    <externalId>true</externalId>
    <label>Contact External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>