force-app/main/default/objects/Contact/fields/Decision_Role__c.field-meta.xml
<CustomField>
    <fullName>Decision_Role__c</fullName>
    <description>Decision influence level for this contact (Decision Maker, Influencer, Gatekeeper, etc.).</description>
    <label>Decision Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>