force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Business role for the contact in the account engagement.</description>
    <label>Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>